--- a/css/main.css
+++ b/css/main.css
@@ -1,326 +1,357 @@
-.navbar{
-  background: #f4faf4;
-}
+.navbar
+    {
+        background: #f4faf4;
+    }
 
-.nav-item{
-  font-size: 12px;
-  font-weight: bold;
-}
+.nav-item
+    {
+        font-size: 12px;
+        font-weight: bold;    
+    }
+    
+.mid
+    {
+        width: 100%;
+        height: 90vh;
+        overflow: hidden;
+    }
 
-.mid{
-  width: 100%;
-  height: 90vh;
-  overflow: hidden;
-}
+.mid img
+    {
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        object-fit: cover;
+        position: absolute;
+        margin-bottom: 20px;  
+    }
 
-.mid img{
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  object-fit: cover;
-  position: absolute;
-  margin-bottom: 20px;
-}
+#containerr
+    {
+        text-align: left;
+        padding: 18px;
+        margin-top: 35%;
+        margin-left: 50%;
+        color: #FFFFFF;
+        background: transparent;
+        background-color: rgba(0, 0, 0, 0.616);
+        transform: translate(-50%, -50%);
+        border-style: solid;
+        border-width: 5px 0 0;
+        border-color: #5cb85c;
+        height: 32%;
+        width: 58%;
+    }
+    
+h2
+    {
+        font-size: 17px;
+        margin-top: 20px;
+    }
 
-#containerr{
-  text-align: left;
-  padding: 18px;
-  margin-top: 35%;
-  margin-left: 50%;
-  color: #FFFFFF;
-  background: transparent;
-  background-color: rgba(0, 0, 0, 0.616);
-  transform: translate(-50%, -50%);
-  border-style: solid;
-  border-width: 5px 0 0;
-  border-color: #5cb85c;
-  height: 32%;
-  width: 58%;
-}
+    
+* 
+    {
+        box-sizing: border-box;
+    }
 
-h2{
-  font-size: 17px;
-  margin-top: 20px;
-}
+    /* Create two equal columns that floats next to each other */
+.column 
+    {
+        margin-left: 3%;
+        padding: 10px;
+        height: 300px; /* Should be removed. Only for demonstration */
+    }
 
-* {
-  box-sizing: border-box;
-}
+    /* Clear floats after the columns */  
+    .row:after 
+    {
+        content: "";
+        display: table;
+        clear: both; 
+    }
 
-/* Create two equal columns that floats next to each other */
-.column {
-  margin-left: 3%;
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
+    /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px)
+    {
+        .column 
+            {
+                width: 100%;
+            }
+    }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+#column1
+    {
+        padding: 5px;
+        margin-left: 17%;
+    }
 
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-  }
-}
+#column2
+    {
+        margin-top: 18px;
+        padding: 5px;
+    }
 
-#column1{
-  padding: 5px;
-  margin-left: 17%;
-}
+p
+    {
+        font-size: 12px;
+    }
 
-#column2{
- margin-top: 18px;
-  padding: 5px;
-}
+img
+    {
+        height: 50px;
+    }
 
-p{
-  font-size: 12px;
-}
+    /*newwww*/
+.box
+    {
+        background: #eee;
+    }
+    
+.box
+    {
+        padding:60px 0px; 
+    }
+    
+.box-part
+    {
+        background:#FFF;
+        border-radius:0;
+        padding:5px 5px;
+        margin:30px 0px;
+        height: 250px;
+    }
 
-img{
-  height: 50px;
-  }
+.text
+    {
+        margin:20px 0px;
+    }
 
-  /*newwww*/
+.pic1
+    {
+        height: 40%;
+        margin-top: 2%; 
+    }
 
-  .box{
-    background: #eee;
+* 
+    {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
 
+.body 
+    {
+        font-family: Raleway;
+        background-color: white;
+    }
 
-  }
+.heading 
+    {
+        text-align: center;
+        font-size: 2.0em;
+        letter-spacing: 1px;
+        padding: 40px;
+        color: white;
+    }
 
+.gallery-image
+    {
+        padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 
-  .box{
-    padding:60px 0px;
-  }
+.gallery-image img 
+    {
+        height: 250px;
+        width: 350px;
+        transform: scale(1.0);
+        transition: transform 0.4s ease;
+    }
 
-  .box-part{
-    background:#FFF;
-    border-radius:0;
-    padding:5px 5px;
-    margin:30px 0px;
-    height: 250px;
-  }
-  .text{
-    margin:20px 0px;
-  }
+.img-box 
+    {
+        box-sizing: content-box;
+        margin: 10px;
+        height: 250px;
+        width: 350px;
+        overflow: hidden;
+        display: inline-block;
+        color: white;
+        position: relative;
+        background-color: white;
+    }
+    
+.caption 
+    {
+        position: absolute;
+        bottom: 5px;
+        left: 20px;
+        opacity: 0.0;
+        transition: transform 0.3s ease, opacity 0.3s ease;
+    }
 
-  .pic1{
-    height: 40%;
-    margin-top: 2%;
-  }
+.transparent-box 
+    {
+        height: 250px;
+        width: 350px;
+        background-color:rgba(0, 0, 0, 0);
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: background-color 0.3s ease;
+    }
 
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
+.img-box:hover img 
+    {
+        transform: scale(1.1);
+    }
 
-  .body {
-    font-family: Raleway;
-    background-color: white;
-  }
-
-  .heading {
-      text-align: center;
-      font-size: 2.0em;
-      letter-spacing: 1px;
-      padding: 40px;
-      color: white;
-  }
-
-  .gallery-image {
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .gallery-image img {
-    height: 250px;
-    width: 350px;
-    transform: scale(1.0);
-    transition: transform 0.4s ease;
-  }
-
-  .img-box {
-    box-sizing: content-box;
-    margin: 10px;
-    height: 250px;
-    width: 350px;
-    overflow: hidden;
-    display: inline-block;
-    color: white;
-    position: relative;
-    background-color: white;
-  }
-
-  .caption {
-    position: absolute;
-    bottom: 5px;
-    left: 20px;
-    opacity: 0.0;
-    transition: transform 0.3s ease, opacity 0.3s ease;
-  }
-
-  .transparent-box {
-    height: 250px;
-    width: 350px;
-    background-color:rgba(0, 0, 0, 0);
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: background-color 0.3s ease;
-  }
-
-  .img-box:hover img {
-    transform: scale(1.1);
-  }
-
-  .img-box:hover .transparent-box {
-    background-color:rgba(0, 0, 0, 0.5);
-  }
-
-  .img-box:hover .caption {
+.img-box:hover .transparent-box 
+    {
+        background-color:rgba(0, 0, 0, 0.5);
+    }
+    
+.img-box:hover .caption {
     transform: translateY(-20px);
     opacity: 1.0;
-  }
+    }
 
-  .img-box:hover {
+.img-box:hover {
     cursor: pointer;
-  }
+    }
 
-  .caption > p:nth-child(2) {
+.caption > p:nth-child(2) {
     font-size: 0.8em;
-  }
+    }
 
-  .opacity-low {
+.opacity-low {
     opacity: 0.5;
-  }
-  .btn{
+    }
+
+.btn{
     margin-top: 2%;
     font-size: 11px;
-  }
+    }
 
 .container-fluid{
-  padding: 20%;
-
-}
+    padding: 20%;
+    }
 
 #image{
-  margin-top: 8px;
-  width: 82%;
-}
-
+    margin-top: 8px;
+    width: 82%;
+    }
 
 #boxes{
-  margin-left: 100px;
-  margin-right: -45px;
-}
-
+    margin-left: 100px;
+    margin-right: -45px;
+    }
 
 #midbox{
-  margin-left: 30px;
-  margin-right: 30px;
-}
+    margin-left: 30px;
+    margin-right: 30px;
+    }
 
 #boxess{
-  margin-left: -45px;
-  margin-right: 100px;
-}
-
+    margin-left: -45px;
+    margin-right: 100px;
+    }
+    
 #bot1{
-  margin-left: 100px;
-  margin-right: -45px;
-}
+    margin-left: 100px;
+    margin-right: -45px;
+    }
 
 #bot2{
-  margin-left: 30px;
-  margin-right: 30px;
-}
+    margin-left: 30px;
+    margin-right: 30px;
+    }
 
 #bot3{
-  margin-left: -45px;
-  margin-right: 100px;
-}
+    margin-left: -45px;
+    margin-right: 100px;
+    }
 
 #col4{
-  margin-top: 30px;
-  width: 72%;
-}
+    margin-top: 30px;
+    width: 72%;
+    }
 
 #cul{
-  margin-left: 10%;
-  margin-right: 10%;
-}
+    margin-left: 10%;
+    margin-right: 10%;
+    }
 
 .card-columns{
-  column-count: 4;
-}
+    column-count: 4;
+    }
 
-#contact_con{
-  text-align: left;
-    padding: 18px;
-    color: #FFFFFF;
-    background: transparent;
-    background-color: rgba(0,0,0,.5);
-    transform: translate(-50%, -50%);
-    border-style: solid;
-    border-width: 5px 0 0;
-    border-color: #5cb85c;
-    height: 40%;
+#contact_con
+    {
+        text-align: left;
+        padding: 18px;
+        color: #FFFFFF;
+        background: transparent;
+        background-color: rgba(0,0,0,.5);
+        transform: translate(-50%, -50%);
+        border-style: solid;
+        border-width: 5px 0 0;
+        border-color: #5cb85c;
+        height: 40%;
+    }
 
-}
+#contain
+    {
+        width: 90%;
+        margin: auto;
+        overflow: hidden;
+        background: skyblue;
+        margin-top: 20px;
+    }
+    
+#contain ul
+    {
+        padding: 0px;
+        margin: 0px;
+    }
 
+#contain ul li
+    {
+        float:left;
+        list-style: none;
+        width:20%;
+        height:300px;
+        background: red;
+        margin :20px 0px 20px 55px;
+        border:2px solid blue;
+        box-sizing: border-box;
+    }
 
-#contain{
-  width: 90%;
-  margin: auto;
-  overflow: hidden;
-  background: skyblue;
-  margin-top: 20px;
-}
+#contain ul li:hover
+    {
+        opacity: 0.8;
+    }
 
-#contain ul{
-  padding: 0px;
-  margin: 0px;
-}
+#contain ul li .bottom
+    {
+        width: 100%;
+        height:50px;
+        line-height: 50px;
+        background: blue;
+        text-align: center;
+        color:white;
+        font-size: 20px;
+    }
 
+@media screen and (max-width:1250px)
+    {
 
-#contain ul li{
-  float:left;
-  list-style: none;
-  width:20%;
-  height:300px;
-  background: red;
-  margin :20px 0px 20px 55px;
-  border:2px solid blue;
-  box-sizing: border-box;
-}
-#contain ul li:hover{
-  opacity: 0.8;
-}
-
-#contain ul li .bottom{
-  width: 100%;
-  height:50px;
-  line-height: 50px;
-  background: blue;
-  text-align: center;
-  color:white;
-  font-size: 20px;
-
-}
-
-@media screen and (max-width:1250px){
-  #contain ul li{
-      width:40%;
-      margin-left: 40px;
-
-  }
-}
+        #contain ul li
+        {
+            width:40%;
+            margin-left: 40px;
+        }
+    }
